--- a/src/br/com/karenaraujo/projetoloja/view/CadastrarProdutoGUI.form
+++ b/src/br/com/karenaraujo/projetoloja/view/CadastrarProdutoGUI.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -176,6 +176,9 @@
         <Component class="javax.swing.JTextField" name="txNome">
         </Component>
         <Component class="javax.swing.JTextField" name="txCodigo">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txCodigoActionPerformed"/>
           </Events>
